deps/v8/test/message/fail/regress-crbug-417373146.out
*%(basename)s:5: SyntaxError: Malformed arrow function parameter list
(y=(""+"")+""=>n
    ^^^^^^^
SyntaxError: Malformed arrow function parameter list
